fixed padding projects on mobile

--- a/src/component/view/projects.scss
+++ b/src/component/view/projects.scss
@@ -5,6 +5,8 @@
   align-items: center;
   overflow: hidden;
   width: 100%;
+  padding: 0px 50px 0px 50px;
+
   .itemsContainer {
     display: flex;
     flex-direction: column;
@@ -13,7 +15,6 @@
     gap: 60px;
     width: 100%;
     overflow: hidden;
-    padding: 0px 50px 0px 50px;
 
     #title {
       display: flex;
@@ -37,6 +38,7 @@
       gap: 24px;
       padding-bottom: 20px;
       box-sizing: border-box;
+
       * {
         flex-shrink: 0;
       }
@@ -44,6 +46,9 @@
   }
 }
 @media (max-width: 500px) {
+  .projects {
+    padding: 0px 10px 0px 10px;
+  }
   .projectsCardsContainer {
     padding-left: 10px;
     scroll-snap-type: x mandatory;
